--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,11 +2,16 @@
   %head
     %meta{ :charset => "utf-8" }/
     %meta{ 'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }/
+    %meta{ :name => "viewport", :content => "width=device-width" }/
     %title #RubyFriends - Smile for the camera!
-    -# %link{href: '/atom.xml', rel: "alternate", type: "application/atom+xml", title: "FridayHug.com Atom Feed"}
     = stylesheet_link_tag 'application'
-    = javascript_include_tag 'application'
     = csrf_meta_tag
     -# TODO - add google analytics
   %body
-    = yield
+    #wrapper
+      = render 'header'
+      %section#main{role: 'main'}
+        = yield
+      =# render 'footer'
+    = javascript_include_tag 'application'
+    = yield :javascripts
