Set image width and height in css
Reduces page rerendering while downloading images

--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -98,3 +98,8 @@ section#main {
 .click_to_ajax_overlay {
   cursor:pointer;
 } //.click_to_ajax_overlay
+
+.pic {
+  width: 335px;
+  height: 251px;
+}
