Revert "Set image width and height in css"
This reverts commit 661d3d5c7e6ede51dc52af20167cb188c95ca178.

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -19,7 +19,7 @@
   - paginated_tweets.each do |tweet|
     %li{class: cycle('one', 'two', 'three', 'four')}
       %a.ajax_overlay{href: tweet_path(tweet)}
-        = image_tag(tweet.image_url(:thumb).to_s, class: :pic)
+        = image_tag(tweet.image_url(:thumb).to_s)
       .text
         %p= tweet.tweet_text
         %small
