--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -1,17 +1,14 @@
-@mixin no-list {
-  list-style: none;
-  margin-left: 0;
-}
-
 #wrapper {
   @include container;
   // @include susy-grid-background;
 
-  @include at-breakpoint($mobile-layout) { // ;
-    @include set-container-width;
-    // @include susy-grid-background;
-  }
+  // @include at-breakpoint($mobile-layout) { // ;
+  //   @include set-container-width;
+  //   // @include susy-grid-background;
+  // }
 } //#wrapper
+
+
 
 header#page_header {
   @include span-columns(12);
@@ -75,26 +72,4 @@ section#main {
   } //#smiles-list
 } //section#main
 
-@mixin close-button {
-  @include sprites-sprite(close);
-  position:absolute;
-  left:5px; top:5px;
-  cursor:pointer;
-  height:35px;
-  width:35px;
-  background-color:transparent;
-}
 
-#overlay {
-  display:none;
-  padding:35px;
-  @include border-radius(10px);
-  outline:none;
-  .close {
-    @include close-button;
-  } //.close
-} //.overlay
-
-.click_to_ajax_overlay {
-  cursor:pointer;
-} //.click_to_ajax_overlay
