--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
     %meta{ :charset => "utf-8" }/
     %meta{ 'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }/
     %meta{ :name => "viewport", :content => "width=device-width" }/
+    = auto_discovery_link_tag :atom, tweets_url(format: :atom), title: "#RubyFriends"
     %title #RubyFriends - Smile for the camera!
     = stylesheet_link_tag 'application'
     = csrf_meta_tag
