--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,8 @@
 %html
   %head
-    %meta{ :charset => "utf-8" }/
-    %meta{ 'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }/
-    %meta{ :name => "viewport", :content => "width=device-width" }/
+    %meta{charset: "utf-8" }/
+    %meta{'http-equiv' => 'X-UA-Compatible', content: 'IE=edge,chrome=1' }/
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}/
     %title #RubyFriends - Smile for the camera!
     = stylesheet_link_tag 'application'
     = csrf_meta_tag
