UI text updates

--- a/app/views/tweets/about.html.haml
+++ b/app/views/tweets/about.html.haml
@@ -1,5 +1,11 @@
 .hero-unit
   %h1
     \#RubyFriends?
-    %p Some text goes here
+    %p
+      Isn't it great meeting new Ruby friends at conferences, Ruby brigades,
+      meetups, hackathons, or wherever?
+    %p
+      Wouldn't it be great to share that new friendship? Now you can! Just
+      snap a pic of you and your new friend(s) together, tweet it with
+      hashtag #RubyFriends, and we'll include it on the site here.
     %a{href: '/', class: 'btn btn-large'} Back
