--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -10,16 +10,16 @@
     #{rubyfriends_app.tweets_count} friendships so far!
 
 %ul#smiles-list
-  - paginated_tweets.each do |tweet|
+  - paginated_tweets.map { |tweet| Tweet::HtmlPresenter.new tweet }.each do |tweet|
     %li{class: cycle('one', 'two', 'three', 'four')}
       %a.ajax_overlay{href: tweet_path(tweet)}
         = image_tag(tweet.image_url(:thumb).to_s)
       .text
         %p= tweet.tweet_text
         %small
-          = link_to "@#{tweet.username}", twitter_url(tweet.username)
-          at #{tweet.published_at.strftime('%b, %d %Y')}
-          = link_to "link", twitter_url("#{tweet.username}/status/#{tweet.tweet_id}")
+          = link_to tweet.username, twitter_url(tweet.username)
+          on #{tweet.date}
+          = link_to "link", tweet.url
 
 = paginate(paginated_tweets)
 
