--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -47,6 +47,7 @@ section#main {
       @extend .btn;
       @extend .btn-primary;
       @extend .btn-large;
+      margin: 0 1em 0 0;
     } //a#learn_more
 
     h1 {
@@ -61,15 +62,12 @@ section#main {
       @include sprites-sprite(twitter_newbird_blue);
       @include margin-trailer(0.5);
       position:relative;
-      p {
-        width:120px;
-        @include adjust-font-size-to(16px);
-        margin-bottom:0;
-        position:absolute;
-        left:130px;
-        top:-30px;
-      } //p
     } //.bird
+
+    p {
+      @include adjust-font-size-to(20px);
+      // margin: 1em;
+    }
 
     span.shared-smiles-count {
       @extend .label;
