--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,11 @@
     = csrf_meta_tag
   %body
     #wrapper
-      = render 'header'
+      %header#page_header
+        %h1= link_to rubyfriends_app.title, root_path
+        .feed
+          = link_to image_tag('twitter_icon_grey.png'), twitter_url
+          = link_to image_tag('feed_icon_grey.png'), tweets_url(format: :atom)
       %section#main{ role: :main }
         = yield
     = javascript_include_tag :application
