Change title to #RubyFriends

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
   %body
     #wrapper
       %header#page_header
-        %h1= link_to rubyfriends_app.title, root_path
+        %h1= link_to "#RubyFriends", root_path
         .feed
           = link_to image_tag('twitter_icon_grey.png'), twitter_url
           = link_to image_tag('feed_icon_grey.png'), tweets_url(format: :atom)
