Remove title and subtitle from app init

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,6 +1,6 @@
 .hero-unit
   %h3
-    = rubyfriends_app.subtitle
+    Community starts with friendship!
     = link_to "Learn more", about_path, id: 'learn-more'
   -# TODO - add facebook like button
   %p
