Make username more prominent

--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -98,10 +98,12 @@ section#main {
       } //&.two, &.four
 
       .text {
-        margin: 1em
+        margin: 1em;
+
+        .username {
+          font-size: 1.5em;
+        }
       }
     } //li
   } //#smiles-list
 } //section#main
-
-
