Fix Ajax overlay images

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -12,7 +12,7 @@
 %ul#smiles-list
   - paginated_tweets.map { |tweet| Tweet::HtmlPresenter.new tweet }.each do |tweet|
     %li{class: cycle('one', 'two', 'three', 'four')}
-      %a.ajax_overlay{href: tweet_path(tweet)}
+      %a.ajax_overlay{href: tweet_path(tweet.tweet)}
         = image_tag(tweet.image_url(:thumb).to_s)
       .text
         %p= raw(tweet.text)
