Add attribution to @krsmurata and #fridayhug

--- a/app/views/tweets/about.html.haml
+++ b/app/views/tweets/about.html.haml
@@ -8,4 +8,11 @@
     Wouldn't it be great to share that new friendship? Now you can! Just
     snap a pic of you and your new friend(s) together, tweet it with
     hashtag #RubyFriends, and we'll include it on the site here.
-  %a{href: '/', class: 'btn btn-large'} Back
+  %p
+    Thanks to
+    = link_to "Kristopher Murata", "http://twitter.com/krsmurata"
+    and the rest of the
+    = link_to "#FridayHug", "http://fridayhug.com"
+    team for sharing their source code. ☺
+  %p
+    %a{href: '/', class: 'btn btn-large'} Back
