--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,7 +1,7 @@
 .hero-unit
   %h3
     Community starts with friendship!
-    = link_to "Learn more", about_path, id: 'learn-more'
+    %span= link_to "Learn more", about_path, id: 'learn-more'
   -# TODO - add facebook like button
   %p
     Share your friendships with the hashtag
