Use relative column span instead of fixed

--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -130,7 +130,7 @@ hr {
 
     #smiles-list {
       li {
-        @include span-columns(6);
+        @include span-columns($total-columns);
       }
     }
   }
