--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -106,6 +106,10 @@ section#main {
       }
     } //li
   } //#smiles-list
+
+  .pagination {
+    @include span-columns($total-columns);
+  }
 } //section#main
 
 hr {
