Remove overlay border, padding for small screens

--- a/app/assets/stylesheets/_overlay.css.scss
+++ b/app/assets/stylesheets/_overlay.css.scss
@@ -30,6 +30,17 @@
   } //img
 } //.overlay
 
+@media screen and (max-width: 820px) {
+  #overlay {
+    width: 98%;
+
+    img {
+      padding: 0;
+      border: 0;
+    } //img
+  } //#overlay
+} //@media
+
 .click_to_ajax_overlay {
   cursor:pointer;
 } //.click_to_ajax_overlay
