--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,8 @@ $full-break: 12;
 $base-font-size:$baseFontSize; //14px
 $base-line-height:$baseLineHeight; //20px
 
+$mobile-width: 820px;
+
 // mixins first (or anything used by following files, so sprites too)
 @import "mixins";
 @import "sprites/*.png";
